--- a/app/src/main/res/layout/activity_add_record.xml
+++ b/app/src/main/res/layout/activity_add_record.xml
@@ -20,7 +20,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/add_record_list_view_alerts" />
+            app:layout_constraintTop_toBottomOf="@+id/add_record_list_view_alerts"
+            android:backgroundTint="@color/dark"/>
 
         <TextView
             android:id="@+id/add_record_text_view_date"
@@ -40,9 +41,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Vybrat datum"
+            app:layout_constraintBottom_toTopOf="@id/ratingBarResourcesState"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/add_record_text_view_date"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            android:backgroundTint="@color/dark"/>
 
         <TextView
             android:id="@+id/textViewResourcesState"
@@ -55,23 +58,23 @@
             app:layout_constraintBottom_toBottomOf="@+id/ratingBarResourcesState"
             app:layout_constraintEnd_toStartOf="@id/ratingBarResourcesState"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ratingBarResourcesState"/>
+            app:layout_constraintTop_toTopOf="@+id/ratingBarResourcesState" />
 
         <RatingBar
             android:id="@+id/ratingBarResourcesState"
-            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            style="@style/CustomRatingBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:isIndicator="false"
             android:numStars="5"
             android:stepSize="0.01"
-            android:isIndicator="false"
+            app:layout_constraintBottom_toTopOf="@+id/ratingBarBroodIntegrity"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textViewResourcesState"
-            app:layout_constraintBottom_toTopOf="@+id/ratingBarBroodIntegrity"
-            app:layout_constraintTop_toBottomOf="@+id/buttonSelectDateRecord"/>
+            app:layout_constraintTop_toBottomOf="@+id/buttonSelectDateRecord" />
 
         <TextView
             android:id="@+id/textViewBroodIntegrity"
@@ -88,19 +91,19 @@
 
         <RatingBar
             android:id="@+id/ratingBarBroodIntegrity"
-            style="@style/Widget.AppCompat.RatingBar.Indicator"
+            style="@style/CustomRatingBarStyle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:isIndicator="false"
             android:numStars="5"
             android:stepSize="0.01"
-            android:isIndicator="false"
+            app:layout_constraintBottom_toTopOf="@+id/add_record_edit_text_feeding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textViewBroodIntegrity"
-            app:layout_constraintBottom_toTopOf="@+id/add_record_edit_text_feeding"
-            app:layout_constraintTop_toBottomOf="@+id/ratingBarResourcesState"/>
+            app:layout_constraintTop_toBottomOf="@+id/ratingBarResourcesState" />
 
         <EditText
             android:id="@+id/add_record_edit_text_feeding"
@@ -110,15 +113,16 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
-            android:maxLines="8"
             android:gravity="start|top"
             android:hint="Krmení/přikrmování"
             android:inputType="textMultiLine"
+            android:maxLines="8"
             android:scrollbars="vertical"
+            app:layout_constraintBottom_toTopOf="@id/add_record_edit_text_record"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/ratingBarBroodIntegrity"
-            app:layout_constraintBottom_toTopOf="@id/add_record_edit_text_record"/>
+            android:backgroundTint="@color/dark"/>
 
         <EditText
             android:id="@+id/add_record_edit_text_record"
@@ -128,15 +132,16 @@
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
             android:ems="10"
-            android:maxLines="8"
             android:gravity="start|top"
             android:hint="Poznámka"
             android:inputType="textMultiLine"
+            android:maxLines="8"
             android:scrollbars="vertical"
+            app:layout_constraintBottom_toTopOf="@id/numberPickerBases"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/add_record_edit_text_feeding"
-            app:layout_constraintBottom_toTopOf="@id/numberPickerBases"/>
+            android:backgroundTint="@color/dark"/>
 
         <TextView
             android:id="@+id/textMezisteny"
@@ -148,7 +153,7 @@
             app:layout_constraintBottom_toBottomOf="@+id/numberPickerBases"
             app:layout_constraintEnd_toStartOf="@id/numberPickerBases"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/numberPickerBases"/>
+            app:layout_constraintTop_toTopOf="@+id/numberPickerBases" />
 
         <NumberPicker
             android:id="@+id/numberPickerBases"
@@ -156,28 +161,30 @@
             android:layout_height="70dp"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="10dp"
+            app:layout_constraintBottom_toTopOf="@+id/buttonAddAlert"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/textMezisteny"
             app:layout_constraintTop_toBottomOf="@id/add_record_edit_text_record"
-            app:layout_constraintBottom_toTopOf="@+id/buttonAddAlert"
-            app:layout_constraintEnd_toEndOf="parent"/>
+            android:backgroundTint="@color/dark"/>
 
         <Button
             android:id="@+id/buttonAddAlert"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@id/numberPickerBases"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="8dp"
-            android:text="Přidat upozornění" />
+            android:text="Přidat upozornění"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/numberPickerBases"
+            android:backgroundTint="@color/dark"/>
 
         <ListView
             android:id="@+id/add_record_list_view_alerts"
             android:layout_width="match_parent"
             android:layout_height="300dp"
             android:nestedScrollingEnabled="true"
-            app:layout_constraintTop_toBottomOf="@id/buttonAddAlert"
             app:layout_constraintBottom_toTopOf="@id/buttonAddRecord"
+            app:layout_constraintTop_toBottomOf="@id/buttonAddAlert"
             tools:layout_editor_absoluteX="0dp" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
