--- a/app/src/main/res/layout/activity_add_honey_harvest.xml
+++ b/app/src/main/res/layout/activity_add_honey_harvest.xml
@@ -27,7 +27,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/add_harvest_text_view_date"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@id/add_harvest_amount"/>
+        app:layout_constraintBottom_toTopOf="@id/add_harvest_amount"
+        android:backgroundTint="@color/dark"/>
 
     <EditText
         android:id="@+id/add_harvest_amount"
@@ -41,7 +42,8 @@
         app:layout_constraintBottom_toTopOf="@id/add_harvest_water_content"
         app:layout_constraintEnd_toStartOf="@id/add_harvest_text_view_kg"
         app:layout_constraintStart_toStartOf="parent"
-        android:inputType="numberDecimal"/>
+        android:inputType="numberDecimal"
+        android:backgroundTint="@color/dark"/>
 
     <TextView
         android:id="@+id/add_harvest_text_view_kg"
@@ -68,7 +70,8 @@
         app:layout_constraintBottom_toTopOf="@id/add_harvest_type"
         app:layout_constraintEnd_toStartOf="@id/add_harvest_text_view_percent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/add_harvest_amount"/>
+        app:layout_constraintTop_toBottomOf="@id/add_harvest_amount"
+        android:backgroundTint="@color/dark"/>
 
     <TextView
         android:id="@+id/add_harvest_text_view_percent"
@@ -95,7 +98,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/add_harvest_water_content"
         app:layout_constraintBottom_toTopOf="@id/add_harvest_text"
-        android:inputType="text"/>
+        android:inputType="text"
+        android:backgroundTint="@color/dark"/>
 
     <EditText
         android:id="@+id/add_harvest_text"
@@ -123,7 +127,8 @@
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@id/add_harvest_text"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintEnd_toEndOf="parent"
+        android:backgroundTint="@color/dark"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
