--- a/app/src/main/res/layout/dialog_add_alert.xml
+++ b/app/src/main/res/layout/dialog_add_alert.xml
@@ -36,6 +36,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:hint="Vložte text upozornění"
-        app:layout_constraintTop_toBottomOf="@id/alert_spinner_severity"/>
+        app:layout_constraintTop_toBottomOf="@id/alert_spinner_severity"
+        android:backgroundTint="@color/dark"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
