--- a/app/src/main/res/layout/dialog_show_record.xml
+++ b/app/src/main/res/layout/dialog_show_record.xml
@@ -46,11 +46,11 @@
 
     <RatingBar
         android:id="@+id/ratingBarDialogResourcesState"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
+        style="@style/CustomRatingBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
         android:stepSize="1"
@@ -75,11 +75,11 @@
 
     <RatingBar
         android:id="@+id/ratingBarDialogBroodIntegrity"
-        style="@style/Widget.AppCompat.RatingBar.Indicator"
+        style="@style/CustomRatingBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:numStars="5"
         android:stepSize="1"
