--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -6,6 +6,7 @@
     android:gravity="bottom"
     android:orientation="vertical"
     android:padding="16dp"
+    android:backgroundTint="@color/mid"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <ImageView
