--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -11,7 +11,7 @@
 
         <item
             android:id="@+id/nav_select"
-            android:icon="@drawable/ic_select"
+            android:icon="@drawable/ic_hive"
             android:title="Zobrazit včelstvo" />
 
         <item
